fixed responsiveness on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,7 @@ footer p {
 	display: inline-block;
 	position: absolute;
 	padding-bottom: -48px;
+	left: 113px;
 	bottom: 42px;
 	padding-left: 13px;
 	color: rgb(1, 83, 14);
@@ -315,7 +316,8 @@ footer p {
 		width:540px;
 	}
 	.main {
-		width:100%;
+		width:70%;
+		padding-left:20px;
 	}
 	.main h1 {
 		font-size:30px;
